src/themes/default/includes/_header.scss
body > header {

    background-color: #f1f3f8;
    color: $color-header;
    padding-top:.5em; padding-left:.5em;

    a { color: $color-header; }

    > .container {
        h1, h2, h1 a {
            display:inline-block;
            margin: .2em 0 .3em 0;
            height:1.5rem; line-height:1.5rem;
            //vertical-align:middle;
        }
        h1 a {
            font-size:1.5rem; font-weight:normal;
            //margin:0;
        }
        h2 {
            font-size:.8rem;
            margin: 0 0 0 2em;
            padding:0 0 0 2em;
            border-left:1px solid $color-border-table;
        }
    }

    .utilityBar {
        position:absolute; right:10px; top:10px;

        nav {
            float: right;
            margin: 0 0 0 1em;
        }
    }
}

